--- a/static/css/place_write.css
+++ b/static/css/place_write.css
@@ -1,1 +1,22 @@
 @import url(base.css);
+
+
+.content-box__item input{
+  width: 100%;
+  height: 25px;
+  border: 1px solid #BFBFBF;
+  border-radius: 10px;
+  padding: 1.5rem 1.5rem;
+}
+
+/* .content-box__item select{
+  width: 100%;
+  height: 25px;
+  border: 1px solid #BFBFBF;
+  border-radius: 10px;
+  padding: 1.5rem 1.5rem;
+} */
+
+.content-box__item label{
+  color: orange;
+}
