[fix] comment 분리 후 main_detail.html  url 변경

--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -110,7 +110,7 @@
       </div>
     </div>
     <div id="main_detail__comment__blank_box">
-      <form action="{% url 'comments:write' post.id %}" method="post">
+      <form action="{% url 'comments:write-post' post.id %}" method="post">
         {% csrf_token %}
         <textarea
           type="text"
