--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -13,7 +13,7 @@
           <div class="input__reg__id">
             {{ form.username.errors }}
             <lable for="{{ form.username.id_for_label }}"><p style="margin-top: 2.5rem">아이디</p></lable>
-            <input type="text" name="username" maxlength="150" autofocus="" required="" id="id_username" placeholder="아이디">
+            <input type="text" name="username" maxlength="20" autofocus="" required="" id="id_username" placeholder="아이디">
           </div>
           <div class="input__email">
             {{ form.email.errors }}
@@ -106,7 +106,7 @@
         <div class="input__reg__nickname">
           {{ form.nickname.errors }}
           <lable for="{{ form.nickname.id_for_label }}"><p>닉네임</p></lable>
-          <input type="text" name="nickname" maxlength="20" required="" id="id_nickname" placeholder="닉네임">
+          <input type="text" name="nickname" maxlength="10" required="" id="id_nickname" placeholder="닉네임">
         </div>
         <p>
           프로필 사진&nbsp;<span style="color: #8c8c8c">(선택)</span><br /><span
@@ -158,28 +158,6 @@
           </select>
         </div>
         <p>생년월일</p>
-        <!--<div class="input__birthday">
-          <input class="input__year" type="number" placeholder="년" />
-          <select
-            class="form-select form-select-lg mb-3 month-select"
-            aria-label=".form-select-lg example"
-          >
-            <option selected>월</option>
-            <option value="Jan">1</option>
-            <option value="Feb">2</option>
-            <option value="Mar">3</option>
-            <option value="Apr">4</option>
-            <option value="May">5</option>
-            <option value="Jun">6</option>
-            <option value="Jul">7</option>
-            <option value="Aug">8</option>
-            <option value="Set">9</option>
-            <option value="Oct">10</option>
-            <option value="Nov">11</option>
-            <option value="Dec">12</option>
-          </select>
-          <input class="input__day" type="number" placeholder="일" />
-        </div>-->
         <div>
           {{ form.birth.errors }}
           <lable for="{{ form.birth.id_for_label }}"></lable>
@@ -192,7 +170,7 @@
           <textarea name="desc" cols="40" rows="5" maxlength="100" id="id_desc" placeholder="100자 이내로 입력해주세요."></textarea>
         </div>
       </div>
-      <button id="signup__2nd__btn" onclick="registerLink()">가입 완료</button>
+      <button id="signup__2nd__btn" onclick="joinform_check();">가입 완료</button>
     </div>
   </div>
   </form>
@@ -264,5 +242,106 @@
       div2nd.style.display = "flex";
     }
   }
+
+
+  //
+  //
+  //
+  //
+  //
+  //
+  //
+  //
+  function joinform_check() {
+  //변수에 담아주기
+  var uid = document.getElementById("id_username");
+  var pwd = document.getElementById("id_password1");
+  var repwd = document.getElementById("id_password2");
+  var uname = document.getElementById("id_name");
+  var nickname = document.getElementById("id_nickname")
+  var email_id = document.getElementById("id_email");
+
+  if (uid.value == "") { 
+    alert("아이디를 입력하세요.");
+    uid.focus(); 
+    return false; 
+  };
+
+  if (pwd.value == "") {
+    alert("비밀번호를 입력하세요.");
+    pwd.focus();
+    return false;
+  };
+
+  var uidCheck = /^(?=.*[a-zA-Z]).{5,20}$/;
+
+  if (!uidCheck.test(uid.value)) {
+    alert("아이디는 5~20자리 영문(소문자)와 숫자로 설정해주세요.")
+    uid.focus();
+    return false();
+  }
+
+  var pwdCheck = /^(?=.*[a-zA-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,15}$/;
+
+  if (!pwdCheck.test(pwd.value)) {
+    alert("비밀번호는 영문자+숫자+특수문자 조합으로 8~15자리 사용해야 합니다.");
+    pwd.focus();
+    return false;
+  };
+
+  if (repwd.value !== pwd.value) {
+    alert("비밀번호가 일치하지 않습니다.");
+    repwd.focus();
+    return false;
+  };
+
+  var unameCheck = /^(?=.*[ㄱ-ㅎ|ㅏ-ㅣ|가-힣]).{2,10}$/;
+
+  if (!unameCheck.test(uname.value)) {
+    alert("이름은 10자 이내의 한글로 작성해주세요.");
+    uname.focus();
+    return false;
+  }
+
+  if (uname.value == "") {
+    alert("이름을 입력하세요.");
+    uname.focus();
+    return false;
+  };
+
+  var nicknameCheck = /[\{\}\[\]\/?.,;:|\)*~`!^\-_+<>@\#$%&\\\=\(\'\"]/gi
+
+  if (email_id.value == "") {
+    alert("이메일 주소를 입력하세요.");
+    email_id.focus();
+    return false;
+  }
+
+  if (!nicknameCheck.temst(nickname.value)) {
+    alert("닉네임은 특수문자를 제외하여 10자 이내로 작성해주세요.");
+    nickname.focus();
+    return false;
+  }
+
+  document.join_form.submit(); 
+}
+
+function id_check() {
+  window.open("", "", "width=600, height=200, left=200, top=100");
+}
+
+function change_email() {
+  var email_add = document.getElementById("email_add");
+  var email_sel = document.getElementById("email_sel");
+
+  var idx = email_sel.options.selectedIndex;
+  var val = email_sel.options[idx].value;
+
+  email_add.value = val;
+}
+
+function search_address() {
+  window.open("", "b", "width=600, height=300, left=200, top=100");
+}
 </script>
 {% endblock %}
