[fix]드롭다운 대신 일단 select, 모집 전환 시 후기 제공

--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -1,7 +1,7 @@
 {% extends 'posts/base.html' %} {% block content %}
 <div class="content">
   <div id="main__introduce_div">
-    <p>(서비스 소개 배너)</p>
+    <img src="https://picsum.photos/1200/500">
   </div>
   <div id="main__main_div">
     <div id="main__search_div">
@@ -97,9 +97,9 @@
               <div class="caret"></div>
             </div>
             <ul class="menu">
-              <li>전체</li>
+              <li class="active">전체</li>
               <li>📅 정기</li>
-              <li class="active">⚡️ 번개</li>
+              <li>⚡️ 번개</li>
             </ul>
           </div>
         </div>
