--- a/notice/templates/notice/base.html
+++ b/notice/templates/notice/base.html
@@ -1,35 +1,22 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/post_main_write.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/post_main_detail.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/post_main.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/review.css' %}" />
-    <script
-      src="https://kit.fontawesome.com/f0c26c0bfa.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/place_home.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/place_detail.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/place_write.css' %}" />
-    <title>MOCO</title>
-  </head>
-  <body>
-    <nav class="navbar">
+<html lang="ko">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script src="https://kit.fontawesome.com/f0c26c0bfa.js" crossorigin="anonymous"></script>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		<link rel="stylesheet" href="{% static 'css/base.css' %}">
+		<link rel="stylesheet" href="{% static 'css/notice_home.css' %}">
+		<link rel="stylesheet" href="{% static 'css/notice_detail.css' %}">
+		<link rel="stylesheet" href="{% static 'css/notice_write.css' %}">
+		<title>MOCO</title>
+	</head>
+	<body>
+		<nav class="navbar">
       <ul class="navbar__list">
-        <li><a href="{% url 'posts:home' %}">MOCO</a></li>
+				<li><a href="{% url 'posts:home' %}">MOCO</a></li>
         <li>
           <div class="base__post_dropdown">
             <div class="base__post_dropbtn">
@@ -44,8 +31,8 @@
         <li><a href="{% url 'place:home' %}">플레이스</a></li>
         <li><a href="{% url 'notice:home' %}">공지사항</a></li>
       </ul>
-      <ul class="navbar__shortcut">
-        {% if user.is_authenticated %}
+			<ul class="navbar__shortcut">
+				{% if user.is_authenticated %}
         <li>
           <div class="base__dropdown">
             <div class="base__dropbtn">
