--- a/static/css/base.css
+++ b/static/css/base.css
@@ -69,7 +69,7 @@ body {
   justify-content: center;
   max-width: 1200px;
   width: 100%;
-  padding: 20px 10px 0 10px;
+  padding: 0 10px 0 10px;
   margin: 0 auto;
 }
 
