[fix] 로그아웃 url 연결

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -70,7 +70,7 @@
               <a href="{% url 'users:profile_view' user.id %}">마이페이지</a>
             </li>
             <li>
-              <a href="{% url 'users:signout'}">로그아웃</a>
+              <a href="{% url 'users:logout' }">로그아웃</a>
             </li>
           </ul>
         </div>
