--- a/place/templates/place/base.html
+++ b/place/templates/place/base.html
@@ -1,19 +1,27 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="ko">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="https://kit.fontawesome.com/f0c26c0bfa.js" crossorigin="anonymous"></script>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-		<link rel="stylesheet" href="{% static 'css/base.css' %}">
-		<link rel="stylesheet" href="{% static 'css/place_home.css' %}">
-		<link rel="stylesheet" href="{% static 'css/place_detail.css' %}">
-		<link rel="stylesheet" href="{% static 'css/place_write.css' %}">
-		<title>MOCO</title>
-	</head>
-	<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/f0c26c0bfa.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/place_home.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/place_detail.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/place_write.css' %}" />
+    <title>MOCO</title>
+  </head>
+  <body>
     <nav class="navbar">
       <ul class="navbar__list">
         <li><a href="{% url 'posts:home' %}">MOCO</a></li>
@@ -57,7 +65,7 @@
               <a href="{% url 'users:profile_view' user.id %}">마이페이지</a>
             </li>
             <li>
-              <a href="{% url 'users:signout'}">로그아웃</a>
+              <a href="{% url 'users:logout' }">로그아웃</a>
             </li>
           </ul>
         </div>
