--- a/notice/templates/notice/main.html
+++ b/notice/templates/notice/main.html
@@ -1,24 +1,21 @@
-{% extends 'notice/base.html' %}
-{% block content %}
+{% extends 'notice/base.html' %} {% block content %}
 <div class="content">
-  <div class="content-count">
-    <p>총 <span>{{count}}</span>건</p>
-  </div>
-  {% if user == admin %}
-  <button type="button" onclick="location.href='/notice/write'">게시물 작성</button>
-  {% endif %}
-    {% for notice in notices %}
-    <a class="content-box__itme" href="{% url 'notice:detail' notice.id %}" >
-      <div class="content-box">
-        <div class="content-box__title">{{notice.title}}</div>
-        <p class="content-box__content">{{notice.content|truncatechars:120}}</p>
-        <div class="content-box__bottom">
-          <span class="content-box__user">{{notice.user}}</span>
-          <span class="content-box__pub">{{published_at}}</span>
-        </div>
-      </div>
-    </a>
-    {% endfor %}
-
+	<div class="content-count">
+		<p>총 <span>{{count}}</span>건</p>
+	</div>
+	{% if user in admin %}
+	<button type="button" onclick="location.href='/notice/write'">게시물 작성</button>
+	{% endif %} {% for notice in notices %}
+	<a class="content-box__itme" href="{% url 'notice:detail' notice.id %}">
+		<div class="content-box">
+			<div class="content-box__title">{{notice.title}}</div>
+			<p class="content-box__content">{{notice.content|truncatechars:120}}</p>
+			<div class="content-box__bottom">
+				<span class="content-box__user">{{notice.user}}</span>
+				<span class="content-box__pub">{{published_at}}</span>
+			</div>
+		</div>
+	</a>
+	{% endfor %}
 </div>
 {% endblock %}
