[feat] 로그인/로그아웃 -> 이전 페이지로 이동

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -43,6 +43,7 @@
             <label for="input__cb"></label>
             <span>아이디 저장</span>
           </div>
+          <input type="hidden" name="next" value="{{ next }}" />
           <button id="login__btn">로그인</button>
         </div>
       </form>
