--- a/users/templates/users/account_base.html
+++ b/users/templates/users/account_base.html
@@ -37,7 +37,7 @@
         <i class="fa-solid fa-circle-user"></i>
         {% else %}
         <li><a href="">글쓰기</a></li>
-        <li><a href="{% url 'users:login' %}">로그인</a></li>
+        <li><a href={% url 'users:login' %}?next={{request.path}}>로그인</a></li>
         {% endif %}
       </ul>
     </nav>
