--- a/place/templates/place/home.html
+++ b/place/templates/place/home.html
@@ -52,7 +52,7 @@
           <span><i class="fa-solid fa-circle-user"></i>{{place.user}}</span>
           <span>
             <span style="margin-right: 0.5rem;"><i class="fa-solid fa-comment-dots"></i>1</span>
-            <span><i class="fa-regular fa-heart"></i>2</span>
+            <span><i class="fa-regular fa-heart"></i>{{place.likes}}</span>
           </span>
         </div>
       </a>
